--- a/src/Pages/Sign In/SignIn.css
+++ b/src/Pages/Sign In/SignIn.css
@@ -1,14 +1,35 @@
 .signIn-container {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 700px;
+  background-attachment: fixed;
+  background-image: url(../../imade/form-banner.jpg);
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.signIn-container::after {
+  width: 100%;
+  height: 700px;
+  position: absolute;
+  content: "";
+  top: 0;
+  bottom: 0;
+  opacity: 0.6;
+  background-color: black;
+}
+.form-area {
+  width: 450px;
+  position: relative;
+  z-index: 1;
 }
 .sign-in {
-  width: 450px;
-  border: 1px solid gray;
-  padding: 15px;
-  border-radius: 5px;
+  border: 1px solid #d3d3d3;
+  padding: 30px 15px 15px 15px;
+  border-radius: 3px;
+  background-color: #fff;
 }
 .sign-in label {
   font-size: 18px;
@@ -29,9 +50,49 @@
   border-radius: 5px;
   background-color: #0d6efd;
 }
+.social-login {
+  position: relative;
+}
+.social-login span {
+  color: #fff;
+  font-size: 18px;
+  margin-top: 10px;
+}
+.social-login span::before {
+  position: absolute;
+  content: "";
+  top: 15px;
+  left: 0;
+  width: 45%;
+  height: 2px;
+  background-color: #d3d3d3;
+}
+.social-login span::after {
+  position: absolute;
+  content: "";
+  top: 15px;
+  right: 0;
+  width: 45%;
+  height: 2px;
+  background-color: #d3d3d3;
+}
+.social-login button {
+  width: 100%;
+  border: none;
+  font-size: 20px;
+  color: #000;
+  padding: 7px;
+  border-radius: 3px;
+  margin-top: 10px;
+  background-color: #fff;
+}
+.social-login img {
+  width: 25px;
+  margin-right: 10px;
+}
 /* responsive mobile */
 @media screen and (max-width: 425px) {
-  .sign-in {
+  .form-area {
     width: 100%;
   }
 }
