--- a/src/Pages/Sign In/SignIn.css
+++ b/src/Pages/Sign In/SignIn.css
@@ -5,7 +5,7 @@
   align-items: center;
   height: 800px;
   background-attachment: fixed;
-  background-image: url(../../imade/form-banner.jpg);
+  background-image: url(../../image/form-banner.jpg);
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
