--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -6,3 +6,16 @@
   margin-left: 20px;
   color: #fff;
 }
+.logout-btn{
+  border: none;
+  color: #fff;
+  margin-left:5px;
+  background-color: #459C98;
+}
+
+/* responsive tablet */
+@media screen and (max-width: 991px) {
+  .logout-btn {
+    display: flex;
+  }
+}
