--- a/src/Pages/Items/Items.css
+++ b/src/Pages/Items/Items.css
@@ -5,7 +5,7 @@
   position: relative;
   height: 620px;
 }
-.items img {
+.book-img img {
   width: 100%;
   margin-bottom: 15px;
   border-radius: 5px;
