--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -1,5 +1,5 @@
 .nav-bar {
-  background-color: #459c98;
+  background-color: #622eee;
 }
 .logo {
   width: 115px;
@@ -14,7 +14,7 @@
   border: none;
   color: #fff;
   margin-left: 5px;
-  background-color: #459c98;
+  background-color: #622eee;
 }
 
 /* responsive tablet */
